[package]
name = "parity-crypto"
version = "0.6.2"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
description = "Crypto utils used by ethstore and network."
license = "MIT OR Apache-2.0"
autobenches = false
edition = "2018"

[[bench]]
name = "bench"
harness = false
required-features = ["publickey"]

[dependencies]
aes = { git = "https://github.com/fortelabsinc/block-ciphers", rev="6c5232fce16396363cdecf71dd5595be4c2ed426" }
aes-ctr = { git = "https://github.com/fortelabsinc/block-ciphers", rev="66c3681d7bdd5fa74dafae1a3ac80ed5ba650559" }
block-modes = { git = "https://github.com/fortelabsinc/block-ciphers", rev="3a7f1b6133cf5764543e72698c93adb586ca5771" }


digest = "0.8"
ethereum-types = { version = "0.9.0", optional = true, path = "../ethereum-types" }
hmac = { git = "https://github.com/fortelabsinc/MACs", rev="5d5702ab28f1882db6803cc4f5d91cd442f07267" }
lazy_static = { version = "1.0", optional = true }
pbkdf2 = { git = "https://github.com/fortelabsinc/password-hashes", rev="1109c9810c492cb15a6da31a6a5a50de026d759a" }
rand = "0.7.2"
ripemd160 = "0.8.0"
rustc-hex = { version = "2.1.0", default-features = false, optional = true }
scrypt = { git = "https://github.com/fortelabsinc/password-hashes", rev="81017191a1a0b9fd8be2e38eae9b5dfeef3c4827" , default-features = false }
secp256k1 = { version = "0.17.2", optional = true, features = ["recovery", "rand-std"] }
sha2 = "0.8.0"
subtle = "2.2.1"
tiny-keccak = { version = "2.0", features = ["keccak"] }
zeroize = { version = "1.0.0", default-features = false }

[dev-dependencies]
criterion = "0.3.0"
hex-literal = "0.2.1"

[features]
default = []
# public key crypto utils
# moved from ethkey module in parity ethereum repository
publickey = ["secp256k1", "lazy_static", "ethereum-types", "rustc-hex"]
